assignment 9; week11 notes

--- a/index.adoc
+++ b/index.adoc
@@ -11,7 +11,7 @@ include::header.adoc[]
 
 [.anns]
 == Announcements
-* *Assignment 08:* link:asst08-blend.html[Blending in]: *Due Nov 12*
+* *Assignment 09:* link:asst09-fade.html[Cross-fade away]: *Due Nov 19*
 * *Quiz 4 (Nov 18)* link:Q4Guide.html[Quiz4 Study Guide]: Transformations
 
 == **Schedule**
