--- a/schedule.adoc
+++ b/schedule.adoc
@@ -123,7 +123,7 @@ Reorienting a motion. Crossfading.
 
 Analytical method for two-link chain. CCD Algorithm.
 
-//* *Assignment 09:* link:asst09-ik.html[Reach for your goals]: *Due Nov 19*
+* *Assignment 09:* link:asst09-fade.html[Cross-fade away]: *Due Nov 19*
 * link:week11.html[Additional Resources]
 * link:Q4Guide.html[Quiz4 Study Guide]: Transformations
 
