--- a/index.adoc
+++ b/index.adoc
@@ -11,8 +11,7 @@ include::header.adoc[]
 
 [.anns]
 == Announcements
-* *Assignment 09:* link:asst09-fade.html[Cross-fade away]: *Due Nov 19*
-* *Quiz 4 (Nov 18)* link:Q4Guide.html[Quiz4 Study Guide]: Transformations
+* *Assignment 10:* link:asst10-ik.html[Reach for your goals]: *Due Dec 2*
 
 == **Schedule**
 
