--- a/schedule.adoc
+++ b/schedule.adoc
@@ -134,39 +134,36 @@ Analytical method for two-link chain. CCD Algorithm.
 
 Physics. Intro to rigid body simulation.
 
-* Open Dynamics Engine (ODE) link:http://ode.org/wiki/index.php?title=Manual[Documentation]
-* Pushing a box: link:Labs/ABoxSim1.cpp.txt[Code]
-* Box with collisions: link:Labs/ABoxSim2.cpp.txt[Code]
-* Mixing kinematic and dynamic boxes: link:Labs/ABoxSim3.cpp.txt[Code]
-* link:https://graphics.stanford.edu/courses/cs448b-00-winter/papers/phys_model.pdf[Physically Based Modeling SIGGRAPH Course]
-* Particle Systems. Demos: water, smoke, fireworks, cloth, jello
-* Simple force particle: link:Labs/forceParticle.cpp.txt[Code]
-//* *Assignment 10:* link:Labs/Lab10-physics.html[Use the force]: *Due Nov 22*
+* link:week12.html[Additional Resources]
+* *Assignment 10:* link:Labs/Lab10-ik.html[Reach for your goals]: *Due Dec 2*
 * *Quiz4 Nov 18*
 
 //-----------------------------
 |13
 |Nov 23 (No class Thursday, Thanksgiving)
-|*Steering behaviors* anchor:week13[]
+|*Steering* anchor:week13[]
 
-Steering behaviors. Crowd simulation.
+A simple car model. Boids.
 
 * link:http://www.red3d.com/cwr/steer/gdc99[Boids]
-//* *Assignment 11:* link:Labs/lab10-steering.html[Flocks]: *Due Dec 2*
 
 //-----------------------------
 |14
 |Nov 39, Dec 2
-|*Skinning* anchor:week14[]
+|*Character animation tools* anchor:week14[]
 
-//* *Assignment 12* link:Labs/lab11-free.html[Free Play]: *Due Dec 9*
-* link:https://www.skinning.org/direct-methods.pdf[Skinning short course (SIGGRAPH 2014)]
+Motion capture. Tools for character modeling, skinning, and keyframing.
+
+* link:https://www.blender.org[Blender]
+//* *Assignment 11:* link:Labs/lab11-steering.html[Flocks]: *Due Dec 9*
+//* link:https://www.skinning.org/direct-methods.pdf[Skinning short course (SIGGRAPH 2014)]
 
 //-----------------------------
 |15
 |Dec 7, Dec 9
-|*Deformers* anchor:week15[]
+|*Character animation in game engines* anchor:week15[]
 
-FDD. Blend shapes.
+* link:https://www.unity3d.com[Unity]
+* link:https:https://www.unrealengine.com/en-US/[Unity]
 
 |===
