--- a/index.adoc
+++ b/index.adoc
@@ -11,7 +11,8 @@ include::header.adoc[]
 
 [.anns]
 == Announcements
-* *Assignment 10:* link:asst10-ik.html[Reach for your goals]: *Due Dec 2*
+* *Assignment 10:* link:asst10-ik.html[Reach for your goals]: *Extended: Due Dec 3*
+* link:week12-ik-worksheet.html[Lab - IK Worksheet]: *Due Dec 2* 
 
 == **Schedule**
 
