--- a/index.adoc
+++ b/index.adoc
@@ -11,8 +11,7 @@ include::header.adoc[]
 
 [.anns]
 == Announcements
-* *Assignment 10:* link:asst10-ik.html[Reach for your goals]: *Extended: Due Dec 3*
-* link:week12-ik-worksheet.html[Lab - IK Worksheet]: *Due Dec 2* 
+* *Final Exam*: self-scheduled, 3 hours, open book/laptop, link:https://www.brynmawr.edu/access-services/students/procedures-and-schedules-final-exams-fall-2021[See here for details]
 
 == **Schedule**
 
